--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <!-- BEGIN HEAD -->
 <head>
 <meta charset="utf-8"/>
-<title>Metronic | UI Features - Tiles</title>
+<title>Home</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <meta content="" name="description"/>
@@ -64,6 +64,7 @@ License: You must have a valid license purchased only from themeforest(the above
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="tiles">
                             <div class="inner">
+                            	<a href="information.html">
 				<div class="tile double-down bg-red">
 					<div class="tile-body">
 						<i class="fa fa-book"></i>
@@ -77,6 +78,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						</div>
 					</div>
 				</div>
+				</a>
 				<div class="tile bg-red">
 					<div class="tile-body">
 						<i class="fa fa-flask"></i>
@@ -104,6 +106,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						</div>
 					</div>
 				</div>
+				<a href="create.html">
 				<div class="tile bg-red">
 					<div class="tile-body">
 						<i class="fa fa-magic"></i>
@@ -114,6 +117,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						</div>
 					</div>
 				</div>
+				</a>
 				<div class="tile bg-red">
 					<div class="tile-body">
 						<i class="fa fa-video-camera"></i>
@@ -147,7 +151,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						</div>
 					</div>
 				</div>
-				<div class="tile double selected bg-yellow">
+				<div class="tile double selected bg-green">
 					<div class="corner">
 					</div>
 					<div class="check">
