--- a/addmedia.html
+++ b/addmedia.html
@@ -153,7 +153,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								<!-- List of media --->
 								<li>Quatum.jpg</li>
 								<div class="form-actions">
-									<button type="submit" class="btn blue">Submit</button>
+									<a href="create.html"><button type="submit" class="btn blue">Submit</button></a>
 									<button type="button" class="btn default">Cancel</button>
 								</div>
 							</div>
