--- a/create.html
+++ b/create.html
@@ -65,6 +65,7 @@ License: You must have a valid license purchased only from themeforest(the above
 			<div class="tiles">
               <div class="inner">
               	<!-- Wrap whole tile into a button for search -->
+              	<a href="createNew.html">
               	<div class="tile double bg-red">
 					<div class="tile-body">
               				<i class="fa fa-briefcase">
@@ -76,6 +77,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						</div>
 					</div>
               </div>
+              </a>
               <!-- home page tile -->
               
               
