--- a/createNew.html
+++ b/createNew.html
@@ -104,7 +104,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								
 								</div>
 									<div class="form-actions">
-									<button type="submit" class="btn blue">Submit</button>
+									<a href="addmedia.html"><button type="submit" class="btn blue">Submit</button></a>
 									<button type="button" class="btn default">Cancel</button>
 								</div>
 							</form>
