--- a/addmedia.html
+++ b/addmedia.html
@@ -151,7 +151,10 @@ License: You must have a valid license purchased only from themeforest(the above
 							<div class="inner">
 								<h4>This is the media that will be uploaded</h4>
 								<!-- List of media --->
-								<li>Quatum.jpg</li>
+								<li>Picture1.jpg</li>
+								<li>Picture2.jpg</li>
+								<li>Movie1.mpeg4</li>
+								<li>Audioclip2.mp3</li>
 								<div class="form-actions">
 									<a href="create.html"><button type="submit" class="btn blue">Submit</button></a>
 									<button type="button" class="btn default">Cancel</button>
