changed list to a table

--- a/addmedia.html
+++ b/addmedia.html
@@ -93,13 +93,13 @@ License: You must have a valid license purchased only from themeforest(the above
 						</div>
 					</div>
 				</div>
-				<div class="tile bg-blue">
+				<div class="tile bg-red">
 					<div class = "tile-body">
 						<i class ="fa fa-microphone"></i>
 					</div>
 					<div class="tile-object">
 						<div class="name">						
-									Add Text
+									Add Audio
 						</div>
 					</div>
 				</div>
@@ -149,12 +149,29 @@ License: You must have a valid license purchased only from themeforest(the above
 						<div class="portlet-body">
 							<!-- BEGIN FORM-->
 							<div class="inner">
-								<h4>This is the media that will be uploaded</h4>
-								<!-- List of media --->
-								<li>Picture1.jpg</li>
-								<li>Picture2.jpg</li>
-								<li>Movie1.mpeg4</li>
-								<li>Audioclip2.mp3</li>
+								<table class="table">
+									<tr>
+										<th>#</th>
+										<th>Name</th>
+										<th>Type</th>
+										<th>Size</th>
+									</tr>
+									<tbody>
+										<tr>
+											<td>1</td>
+											<td>DSC100200.jpeg</td>
+											<td>Picture</td>
+											<td>1.5mb</td>
+										</tr>
+										<tr>
+											<td>2</td>
+											<td>Setting a course.mpeg4</td>
+											<td>Movie</td>
+											<td>46mb</td>
+										</tr>
+										
+									</tbody>
+								</table>
 								<div class="form-actions">
 									<a href="create.html"><button type="submit" class="btn blue">Submit</button></a>
 									<button type="button" class="btn default">Cancel</button>
