added a few more links

--- a/home.html
+++ b/home.html
@@ -92,6 +92,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						</div>
 					</div>
 				</div>
+				<a href = "profile.html">
 				<div class="tile selected bg-red">
 					<div class="corner">
 					</div>
@@ -106,6 +107,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						</div>
 					</div>
 				</div>
+				</a>
 				<a href="create.html">
 				<div class="tile bg-red">
 					<div class="tile-body">
