seems to be a bug not allowing for file preview

--- a/addmedia2.html
+++ b/addmedia2.html
@@ -73,7 +73,7 @@ License: You must have a valid license purchased only from themeforest(the above
 					<div class="portlet box red">
 						<div class="portlet-title">
 							<div class="caption">
-								<i class="fa fa-reorder"></i> Create a new collection
+								<i class="fa fa-reorder"></i> Upload stuff to your collection!
 							</div>
 							<div class="tools">
 								<a href="" class="collapse">
