--- a/home.html
+++ b/home.html
@@ -178,7 +178,7 @@ License: You must have a valid license purchased only from themeforest(the above
 				</div>
 				<div class="tile double bg-yellow">
 					<div class="tile-body">
-                                            <img src="assets/img/layers/Melanie.png" alt="">
+                                            <img src="assets_ltb/img/Melanie.png" alt="">
 						<h4>Announcements</h4>
 						<p>
 							 The Integration Meeting is taking place this week in Aachen.
@@ -195,14 +195,14 @@ License: You must have a valid license purchased only from themeforest(the above
 				</div>
 				<div class="tile image">
 					<div class="tile-body">
-                                            <img src="assets/img/layers/qr-tiles.png" alt="">
+                                            <img src="assets_ltb/img/qr-tiles.png" alt="">
 					</div>
 					<div class="tile-object">
 					</div>
 				</div>
 				<div class="tile image selected">
 					<div class="tile-body">
-                                            <img src="assets/img/layers/Brunnenbauer.png" alt="">
+                                            <img src="assets_ltb/img/Brunnenbauer.png" alt="">
 					</div>
 					<div class="tile-object">
 						<div class="name">
@@ -238,7 +238,7 @@ License: You must have a valid license purchased only from themeforest(the above
 				</div>
 				<div class="tile double bg-yellow">
 					<div class="tile-body">
-                                            <img src="assets/img/layers/donald_duck.jpg" alt="" height="70" width="70" class="pull-right">
+                                            <img src="assets_ltb/img/donald_duck.jpg" alt="" height="70" width="70" class="pull-right">
 						<h3>@frank_meier</h3>
 						<p>
 							 I really love the Learning Toolbox! Please add more cool features.
@@ -280,7 +280,7 @@ License: You must have a valid license purchased only from themeforest(the above
 				</div>
 				<div class="tile image double selected">
 					<div class="tile-body">
-                                            <img src="assets/img/layers/ach_so.png" alt="">
+                                            <img src="assets_ltb/img/ach_so.png" alt="">
 					</div>
 					<div class="tile-object">
 						<div class="name">
