fixed links to profile

--- a/create.html
+++ b/create.html
@@ -31,7 +31,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <!-- END GLOBAL MANDATORY STYLES -->
 <!-- BEGIN THEME STYLES -->
 <link href="assets/css/style-metronic.css" rel="stylesheet" type="text/css"/>
-<link href="assets_ltb/css/child/style-child.css" rel="stylesheet" type="text/css"/>
+<link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
 <link href="assets/css/style-responsive.css" rel="stylesheet" type="text/css"/>
 <link href="assets/css/plugins.css" rel="stylesheet" type="text/css"/>
 <link href="assets/css/themes/default.css" rel="stylesheet" type="text/css" id="style_color"/>
@@ -64,7 +64,7 @@ License: You must have a valid license purchased only from themeforest(the above
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="tiles">
               <div class="inner">
-              	<!-- Wrap whole tile into a button for search -->
+              	<a href ="createNew.html">
 				<div class="tile double bg-red">
 					<div class="tile-body">
 						<i class ="fa fa-briefcase"></i>
@@ -75,6 +75,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						</div>
 					</div>
 				</div>
+				</a>
               <!-- home page tile -->
               
               
