--- a/home-context-rotary-drilling-rig.html
+++ b/home-context-rotary-drilling-rig.html
@@ -31,7 +31,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <!-- END GLOBAL MANDATORY STYLES -->
 <!-- BEGIN THEME STYLES -->
 <link href="assets/css/style-metronic.css" rel="stylesheet" type="text/css"/>
-<link href="assets_ltb/css/child/style-child.css" rel="stylesheet" type="text/css"/>
+<link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
 <link href="assets/css/style-responsive.css" rel="stylesheet" type="text/css"/>
 <link href="assets/css/plugins.css" rel="stylesheet" type="text/css"/>
 <link href="assets/css/themes/default.css" rel="stylesheet" type="text/css" id="style_color"/>
@@ -901,7 +901,7 @@ License: You must have a valid license purchased only from themeforest(the above
 				</a>
                 <div class="tile image selected">
                     <div class="tile-body">
-                                            <img src="assets_ltb/img/rotary_drilling_rig.jpg" alt="">
+                                            <img src="assets/img/layers/rotary_drilling_rig.jpg" alt="">
                     </div>
                     <div class="tile-object">
                         <div class="name">
@@ -909,6 +909,7 @@ License: You must have a valid license purchased only from themeforest(the above
                         </div>
                     </div>
                 </div>
+                <a href="profile.html">
 				<div class="tile selected bg-blue">
 					<div class="corner">
 					</div>
@@ -923,6 +924,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						</div>
 					</div>
 				</div>
+				</a>
 				<a href="create.html">
 				<div class="tile bg-blue">
 					<div class="tile-body">
