--- a/home-context-my-toolbox.html
+++ b/home-context-my-toolbox.html
@@ -31,7 +31,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <!-- END GLOBAL MANDATORY STYLES -->
 <!-- BEGIN THEME STYLES -->
 <link href="assets/css/style-metronic.css" rel="stylesheet" type="text/css"/>
-<link href="assets_ltb/css/child/style-child.css" rel="stylesheet" type="text/css"/>
+<link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
 <link href="assets/css/style-responsive.css" rel="stylesheet" type="text/css"/>
 <link href="assets/css/plugins.css" rel="stylesheet" type="text/css"/>
 <link href="assets/css/themes/default.css" rel="stylesheet" type="text/css" id="style_color"/>
@@ -912,6 +912,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						</div>
 					</div>
 				</div>
+				<a href="profile.html">
 				<div class="tile selected bg-red">
 					<div class="corner">
 					</div>
@@ -926,6 +927,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						</div>
 					</div>
 				</div>
+				</a>
 				<a href="create.html">
 				<div class="tile bg-red">
 					<div class="tile-body">
@@ -997,7 +999,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <!--				
 				<div class="tile double bg-yellow">
 					<div class="tile-body">
-                                            <img src="assets_ltb/img/Melanie.png" alt="">
+                                            <img src="assets/img/layers/Melanie.png" alt="">
 						<h4>Announcements</h4>
 						<p>
 							 The Integration Meeting is taking place this week in Aachen.
@@ -1014,14 +1016,14 @@ License: You must have a valid license purchased only from themeforest(the above
 				</div>
 				<div class="tile image">
 					<div class="tile-body">
-                                            <img src="assets_ltb/img/qr-tiles.png" alt="">
+                                            <img src="assets/img/layers/qr-tiles.png" alt="">
 					</div>
 					<div class="tile-object">
 					</div>
 				</div>
 				<div class="tile image selected">
 					<div class="tile-body">
-                                            <img src="assets_ltb/img/Brunnenbauer.png" alt="">
+                                            <img src="assets/img/layers/Brunnenbauer.png" alt="">
 					</div>
 					<div class="tile-object">
 						<div class="name">
@@ -1057,7 +1059,7 @@ License: You must have a valid license purchased only from themeforest(the above
 				</div>
 				<div class="tile double bg-yellow">
 					<div class="tile-body">
-                                            <img src="assets_ltb/img/donald_duck.jpg" alt="" height="70" width="70" class="pull-right">
+                                            <img src="assets/img/layers/donald_duck.jpg" alt="" height="70" width="70" class="pull-right">
 						<h3>@frank_meier</h3>
 						<p>
 							 I really love the Learning Toolbox! Please add more cool features.
@@ -1099,7 +1101,7 @@ License: You must have a valid license purchased only from themeforest(the above
 				</div>
 				<div class="tile image double selected">
 					<div class="tile-body">
-                                            <img src="assets_ltb/img/ach_so.png" alt="">
+                                            <img src="assets/img/layers/ach_so.png" alt="">
 					</div>
 					<div class="tile-object">
 						<div class="name">
