--- a/home-context-ltm-mobile-crane.html
+++ b/home-context-ltm-mobile-crane.html
@@ -937,17 +937,15 @@ License: You must have a valid license purchased only from themeforest(the above
 					</div>
 				</div>
 				</a>
-				<div class="tile bg-blue">
+				<a href="home-context-mining-excavator.html">
+				<div class="tile image">
 					<div class="tile-body">
-						<i class="fa fa-video-camera"></i>
+                        <img src="assets_ltb/img/qr-tiles.png" alt="">
 					</div>
 					<div class="tile-object">
-						<div class="name">
-							 Ach So!
-						</div>
 					</div>
 				</div>
-				<div class="tile bg-blue">
+				 <div class ="tile bg-blue">
 					<div class="tile-body">
                                             <br/>
                                             <h1>Don't</h1>
