--- a/home-context-rotary-drilling-rig.html
+++ b/home-context-rotary-drilling-rig.html
@@ -937,16 +937,16 @@ License: You must have a valid license purchased only from themeforest(the above
 					</div>
 				</div>
 				</a>
-				<div class="tile bg-blue">
+				<a href="home-context-ltm-mobile-crane.html">
+				<div class="tile image">
 					<div class="tile-body">
-						<i class="fa fa-video-camera"></i>
+                        <img src="assets_ltb/img/qr-tiles.png" alt="">
 					</div>
 					<div class="tile-object">
-						<div class="name">
-							 Ach So!
-						</div>
 					</div>
 				</div>
+				</a>
+
 				<div class="tile bg-blue">
 					<div class="tile-body">
                                             <br/>
