fixed links and fixed table

--- a/login.html
+++ b/login.html
@@ -48,7 +48,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <body class="login">
 <!-- BEGIN LOGO -->
 <div class="logo">
-	<a href="home.html">
+	<a href="home-context-my-toolbox.html">
 		<img src="assets/img/logo-big-ltb.png" alt=""/>
 	</a>
 </div>
