--- a/profile.html
+++ b/profile.html
@@ -160,11 +160,12 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 											</div>
 										</div>
-									</div
 									
 									</div>
 									<div class="tab-pane active" id="tab_6_2">
-										<table class="table">
+										<div class="row">
+											<div class="col-md-9">
+											<table class="table">
 										        <thead>
 										          <tr>
 										            <th>#</th>
@@ -194,9 +195,14 @@ License: You must have a valid license purchased only from themeforest(the above
 										          </tr>
 										        </tbody>
 										      </table>
-																			</div>
+											</div>
+										</div>
+
+									</div>
 									<div class="tab-pane" id="tab_6_3">
-											<table class="table">
+										<div class="row">
+											<div class = "col-md-9">
+												<table class="table">
 												<thead>
 										          <tr>
 										            <th>#</th>
@@ -225,6 +231,9 @@ License: You must have a valid license purchased only from themeforest(the above
 										          </tr>
 										        </tbody>
 										      </table>
+											</div>
+										</div>
+											
 									</div>
 									<!-- Discussions is designed to track discussions the user is currently taking part in -->
 								</div>
