--- a/home-context-rotary-drilling-rig.html
+++ b/home-context-rotary-drilling-rig.html
@@ -884,7 +884,7 @@ License: You must have a valid license purchased only from themeforest(the above
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="tiles">
               <div class="inner">	
-                <a href="information.html">
+                <a href="information-context-rotary-drilling-rig.html">
 				<div class="tile double-down bg-blue">
 					<div class="tile-body">
 						<i class="fa fa-book"></i>
