--- a/information.html
+++ b/information.html
@@ -80,7 +80,7 @@ License: You must have a valid license purchased only from themeforest(the above
               <!-- home page tile -->
               
               
-              	<a href= "home.html">
+              	<a href= "home-context-my-toolbox.html">
 	              	<div class="tile bg-red">
 						<div class="tile-body">
 	              			<i class="fa fa-home"></i>		
