fixed links and added more tiles to information

--- a/login.html
+++ b/login.html
@@ -56,7 +56,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <!-- BEGIN LOGIN -->
 <div class="content">
 	<!-- BEGIN LOGIN FORM -->
-	<form class="login-form" action="home.html" method="post">
+	<form class="login-form" action="home-context-my-toolbox.html" method="post">
 		<h3 class="form-title">Login to your account</h3>
 		<div class="alert alert-danger display-hide">
 			<button class="close" data-close="alert"></button>
