updated img path

--- a/home-context-rotary-drilling-rig-2.html
+++ b/home-context-rotary-drilling-rig-2.html
@@ -899,7 +899,7 @@ License: You must have a valid license purchased only from themeforest(the above
 					</div>
 				</div>
 				</a>
-                <div class="tile image selected">
+                <div class="tile image">
                     <div class="tile-body">
                                             <img src="assets_ltb/img/rotary_drilling_rig.jpg" alt="">
                     </div>
@@ -1001,6 +1001,20 @@ License: You must have a valid license purchased only from themeforest(the above
 						</div>
 					</div>
 				</div>
+				
+				<div class="tile double bg-red">
+
+					<div class="tile-body">
+						<h4>engraf@bau-abc-rostrup.de</h4>
+						<p>
+							 Re: Learning Toolbox v0.5
+						</p>
+						<p>
+							 1 April 2014 12:30PM confirmed for the project plan update meeting...
+						</p>
+					</div>
+				</div>
+				
 				<div class="tile bg-blue">
 					<div class="tile-body">
 						<i class="fa fa-cogs"></i>
