--- a/home-context-my-toolbox.html
+++ b/home-context-my-toolbox.html
@@ -901,11 +901,11 @@ License: You must have a valid license purchased only from themeforest(the above
 				</a>
 				<div class="tile bg-red">
 					<div class="tile-body">
-						<i class="fa fa-flask"></i>
+						<i class="fa fa-group"></i>
 					</div>
 					<div class="tile-object">
 						<div class="name">
-							 Ideas
+							 Social
 						</div>
 						<div class="number">
 							 12
@@ -914,10 +914,6 @@ License: You must have a valid license purchased only from themeforest(the above
 				</div>
 				<a href="profile.html">
 				<div class="tile selected bg-red">
-					<div class="corner">
-					</div>
-					<div class="check">
-					</div>
 					<div class="tile-body">
 						<i class="fa fa-user"></i>
 					</div>
