--- a/home-context-my-toolbox.html
+++ b/home-context-my-toolbox.html
@@ -936,17 +936,37 @@ License: You must have a valid license purchased only from themeforest(the above
 					</div>
 				</div>
 				</a>
-				<div class="tile bg-red">
-					<div class="tile-body">
-						<i class="fa fa-video-camera"></i>
-					</div>
-					<div class="tile-object">
-						<div class="name">
-							 Ach So!
-						</div>
-					</div>
-				</div>
-
+                <a href="make-a-suggestion.html">
+                <div class="tile bg-red">
+                    <div class="tile-body">
+                        <i class="fa fa-comment-o"></i>
+                    </div>
+                    <div class="tile-object">
+                        <div class="name">
+                             Make a suggestion
+                        </div>
+                    </div>
+                </div>
+                </a>
+                <a href="home-context-mining-excavator.html">
+                <div class="tile image">
+                    <div class="tile-body">
+                        <img src="assets_ltb/img/qr-tiles.png" alt="">
+                    </div>
+                    <div class="tile-object">
+                    </div>
+                </div>
+                </a>
+                <div class="tile bg-red">
+                    <div class="tile-body">
+                        <i class="fa fa-video-camera"></i>
+                    </div>
+                    <div class="tile-object">
+                        <div class="name">
+                             Ach So!
+                        </div>
+                    </div>
+                </div>
 				<div class="tile bg-red">
 					<div class="tile-body">
                                             <br/>
