Started on integration with Podio as a backend server, using the Podio PHP client. Reading from Podio working on a first test PHP file.

--- a/home-context-my-toolbox.html
+++ b/home-context-my-toolbox.html
@@ -931,19 +931,19 @@ License: You must have a valid license purchased only from themeforest(the above
 					</div>
 					<div class="tile-object">
 						<div class="name">
-							 Create
+							 Collections
 						</div>
 					</div>
 				</div>
 				</a>
-                <a href="make-a-suggestion.html">
+                <a href="suggestions.html">
                 <div class="tile bg-red">
                     <div class="tile-body">
                         <i class="fa fa-comment-o"></i>
                     </div>
                     <div class="tile-object">
                         <div class="name">
-                             Make a suggestion
+                             Suggestions
                         </div>
                     </div>
                 </div>
