A new LTB page for creating and listing suggestions. Integration with Podio.

--- a/suggestions.html
+++ b/suggestions.html
@@ -64,7 +64,7 @@ License: You must have a valid license purchased only from themeforest(the above
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="tiles">
               <div class="inner">
-              	<a href="make-a-suggestion.html">
+              	<a href="./php/podio-new-suggestion.php">
               	<div class="tile double bg-red">
 					<div class="tile-body">
 					<i class="fa fa-comment-o"></i>
