--- a/profile-2.html
+++ b/profile-2.html
@@ -19,7 +19,7 @@
 <!-- BEGIN THEME STYLES -->
 <link href="assets/css/style-metronic.css" rel="stylesheet" type="text/css">
 <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-<link href="assets_ltb/css/child/style-responsive-child.css" rel="stylesheet" type="text/css">
+<link href="assets/css/style-responsive.css" rel="stylesheet" type="text/css">
 <link href="assets/css/plugins.css" rel="stylesheet" type="text/css">
 <link href="assets/css/themes/default.css" rel="stylesheet" type="text/css" id="style_color">
 <link href="assets/css/pages/profile.css" rel="stylesheet" type="text/css">
@@ -136,13 +136,6 @@
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="row profile">
 				<div class="col-md-12">
-                <div class="btn-group btn-group-solid">
-					<button type="button" class="btn red"><i class="fa fa-user"></i> Overview</button>
-					<button type="button" class="btn red"><i class="fa fa-cogs"></i> Account</button>
-					<button type="button" class="btn red"><i class="fa fa-briefcase"></i> Projects</button>
-                    <button type="button" class="btn red"><i class="fa fa-question"></i> Discussions</button>
-                    <button type="button" class="btn red"><i class="fa fa-caret-square-o-right"></i> Collections</button>
-                </div>
 					<!--BEGIN TABS-->
 					<div class="tabbable tabbable-custom tabbable-full-width">
 						<ul class="nav nav-tabs">
@@ -178,7 +171,7 @@
 									<div class="col-md-3">
 										<ul class="list-unstyled profile-nav">
 											<li>
-												<img src="assets_ltb/img/profile/profile-1.jpg" class="img-responsive" alt="">
+												<img src="assets_ltb/img/profile/profile-2.jpg" class="img-responsive" alt="">
 												<a href="#" class="profile-edit">
 													 edit
 												</a>
@@ -211,18 +204,25 @@
 									<div class="col-md-9">
 										<div class="row">
 											<div class="col-md-8 profile-info">
-												<h1><b>John Harrison</b></h1>
+												<h1><b>Martin Fischer</b></h1>
 												<p>
 													 I am currently working as a project coordinator at the Centre for Numerical Methods in Engineering and as a researcher with IAFI, a small research unit at the University of Barcelona that focuses on the broad philosophical and methodological foundations of finance.<br /><br />
+                                                     I studied aeronautical and aerospace engineering at the University of Stuttgart where I also worked as a research assistant on aerodynamic simulation models. In 1992 I joined the Oxford University Computing Lab to continue in this line of research, but with a more theoretical emphasis on the numerical mathematics of partial differential equations. In 1995, I was hired by Salomon Brothers, a U.S. investment bank, into their fixed income research division where I worked for a number of years, first as a generalist, then as a vice-president. In the year 2000, I took up a position at CIMNE to promote research activities in the field of numerical methods in finance. I have coordinated a number of research projects in the area of learning technologies, decision support, and business simulation.Currently I am coordinating a EU research project, x Delia, that investigates the role of behavioural biases and emotions in building financial competence and expertise, and that develops sensor and game technologies to support non-formal and informal learning in professional trading, private investment, and personal finance. <br /><br />
+                                                     My current research interests centre on investigating systemic financial risk as a social, governmental, and immanently reflexive phenomenon, on developing a methodological basis for multiagent modelling of financial markets, and on conceptualising serious games for immersive learning in business and finance. <br /><br />
+                                                     For an up-to-date list of my talks and publications, please follow this link.<br /><br />
 
                                                     <b>Education:</b><br />
 
-                                                    - Mathematics and Computing, Merton College, Oxford University, 1992-95<br /><br />
+                                                    - Business Administration, Universidad de Barcelona, 2002-today<br />
+                                                    - Philosophy, Fern-Universitat Hagen, 2004-05<br />
+                                                    - Mathematics and Computing, Merton College, Oxford University, 1992-95<br />
+                                                    - Aeronautical and Aerospace Engineering, Universitat Stuttgart, 1987-92<br /><br />
                                                     
                                                     <b>Career history:</b><br />
 
                                                     - R&D Project Coordinator, CIMNE, 2000-today<br />
                                                     - External consultant, Universidad de Barcelona, 2006-2008<br />
+                                                    - Visiting Professor (MIS), Universidad Internacional de Cataluña, 2004<br />
                                                     - Vice-President, Salomon Brothers Int'l, 1997-99<br />
                                                     - Generalist (Bond Portfolio Analysis), Salomon Brothers Int'l, 1995-96<br />
 												</p>
