--- a/home-context-my-toolbox.html
+++ b/home-context-my-toolbox.html
@@ -912,7 +912,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						</div>
 					</div>
 				</div>
-				<a href="profile.html">
+				<a href="friends-list.html">
 				<div class="tile selected bg-red">
 					<div class="tile-body">
 						<i class="fa fa-user"></i>
