--- a/profile-3.html
+++ b/profile-3.html
@@ -19,7 +19,7 @@
 <!-- BEGIN THEME STYLES -->
 <link href="assets/css/style-metronic.css" rel="stylesheet" type="text/css">
 <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-<link href="assets_ltb/css/child/style-responsive-child.css" rel="stylesheet" type="text/css">
+<link href="assets/css/style-responsive.css" rel="stylesheet" type="text/css">
 <link href="assets/css/plugins.css" rel="stylesheet" type="text/css">
 <link href="assets/css/themes/default.css" rel="stylesheet" type="text/css" id="style_color">
 <link href="assets/css/pages/profile.css" rel="stylesheet" type="text/css">
@@ -136,13 +136,6 @@
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="row profile">
 				<div class="col-md-12">
-                <div class="btn-group btn-group-solid">
-					<button type="button" class="btn red"><i class="fa fa-user"></i> Overview</button>
-					<button type="button" class="btn red"><i class="fa fa-cogs"></i> Account</button>
-					<button type="button" class="btn red"><i class="fa fa-briefcase"></i> Projects</button>
-                    <button type="button" class="btn red"><i class="fa fa-question"></i> Discussions</button>
-                    <button type="button" class="btn red"><i class="fa fa-caret-square-o-right"></i> Collections</button>
-                </div>
 					<!--BEGIN TABS-->
 					<div class="tabbable tabbable-custom tabbable-full-width">
 						<ul class="nav nav-tabs">
@@ -178,7 +171,7 @@
 									<div class="col-md-3">
 										<ul class="list-unstyled profile-nav">
 											<li>
-												<img src="assets_ltb/img/profile/profile-1.jpg" class="img-responsive" alt="">
+												<img src="assets_ltb/img/profile/profile-3.jpg" class="img-responsive" alt="">
 												<a href="#" class="profile-edit">
 													 edit
 												</a>
@@ -192,7 +185,7 @@
 												<a href="#">
 													 Messages
 													<span>
-														 3
+														 0
 													</span>
 												</a>
 											</li>
@@ -211,20 +204,23 @@
 									<div class="col-md-9">
 										<div class="row">
 											<div class="col-md-8 profile-info">
-												<h1><b>John Harrison</b></h1>
+												<h1><b>Allison Sanders</b></h1>
 												<p>
 													 I am currently working as a project coordinator at the Centre for Numerical Methods in Engineering and as a researcher with IAFI, a small research unit at the University of Barcelona that focuses on the broad philosophical and methodological foundations of finance.<br /><br />
+                                                     I studied aeronautical and aerospace engineering at the University of Stuttgart where I also worked as a research assistant on aerodynamic simulation models. In 1992 I joined the Oxford University Computing Lab to continue in this line of research, but with a more theoretical emphasis on the numerical mathematics of partial differential equations. In 1995, I was hired by Salomon Brothers, a U.S. investment bank, into their fixed income research division where I worked for a number of years, first as a generalist, then as a vice-president. In the year 2000, I took up a position at CIMNE to promote research activities in the field of numerical methods in finance. I have coordinated a number of research projects in the area of learning technologies, decision support, and business simulation.Currently I am coordinating a EU research project, x Delia, that investigates the role of behavioural biases and emotions in building financial competence and expertise, and that develops sensor and game technologies to support non-formal and informal learning in professional trading, private investment, and personal finance. <br /><br />
 
                                                     <b>Education:</b><br />
 
-                                                    - Mathematics and Computing, Merton College, Oxford University, 1992-95<br /><br />
+                                                    - Business Administration, Universidad de Barcelona, 2002-today<br />
+                                                    - Philosophy, Fern-Universitat Hagen, 2004-05<br />
+                                                    - Mathematics and Computing, Merton College, Oxford University, 1992-95<br />
+                                                    - Aeronautical and Aerospace Engineering, Universitat Stuttgart, 1987-92<br /><br />
                                                     
                                                     <b>Career history:</b><br />
 
                                                     - R&D Project Coordinator, CIMNE, 2000-today<br />
                                                     - External consultant, Universidad de Barcelona, 2006-2008<br />
                                                     - Vice-President, Salomon Brothers Int'l, 1997-99<br />
-                                                    - Generalist (Bond Portfolio Analysis), Salomon Brothers Int'l, 1995-96<br />
 												</p>
 												<p>
 													<a href="#">
@@ -234,9 +230,6 @@
 												<ul class="list-inline">
 													<li>
 														<i class="fa fa-map-marker"></i> Spain
-													</li>
-													<li>
-														<i class="fa fa-star"></i> Learning Toolbox
 													</li>
 													<li>
 														<i class="fa fa-briefcase"></i> Wicam
@@ -915,40 +908,6 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
-											<div class="mix-inner">
-												<img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-2.jpg" alt="">
-												<div class="mix-details">
-													<h3>Preview Image</h3>
-													<p>
-														 At vero eos et accusamus et iusto odio digniss imos duc sasdimus qui sint blanditiis prae sentium.
-													</p>
-													<a class="mix-link" href="http://www.liebherr.com/MCF/en-GB/products_mcf.wfw/id-20860-0/measure-metric/tab-13284_107">
-														<i class="fa fa-link"></i>
-													</a>
-													<a class="mix-preview fancybox-button" href="assets_ltb/img/Rotary-Drilling-Rig-2.jpg" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
-												</div>
-											</div>
-										</div>
-                                        <div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
-											<div class="mix-inner">
-												<img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-3.jpg" alt="">
-												<div class="mix-details">
-													<h3>Preview Image</h3>
-													<p>
-														 At vero eos et accusamus et iusto odio digniss imos duc sasdimus qui sint blanditiis prae sentium.
-													</p>
-													<a class="mix-link" href="http://www.liebherr.com/MCF/en-GB/products_mcf.wfw/id-20860-0/measure-metric/tab-13284_107">
-														<i class="fa fa-link"></i>
-													</a>
-													<a class="mix-preview fancybox-button" href="assets_ltb/img/Rotary-Drilling-Rig-3.jpg" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
-												</div>
-											</div>
-										</div>
                                         <div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-4.jpg" alt="">
@@ -961,23 +920,6 @@
 														<i class="fa fa-link"></i>
 													</a>
 													<a class="mix-preview fancybox-button" href="assets_ltb/img/Rotary-Drilling-Rig-4.jpg" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
-												</div>
-											</div>
-										</div>
-                                        <div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
-											<div class="mix-inner">
-												<img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-5.jpg" alt="">
-												<div class="mix-details">
-													<h3>Preview Image</h3>
-													<p>
-														 At vero eos et accusamus et iusto odio digniss imos duc sasdimus qui sint blanditiis prae sentium.
-													</p>
-													<a class="mix-link" href="http://www.liebherr.com/MCF/en-GB/products_mcf.wfw/id-20860-0/measure-metric/tab-13284_107">
-														<i class="fa fa-link"></i>
-													</a>
-													<a class="mix-preview fancybox-button" href="assets_ltb/img/Rotary-Drilling-Rig-5.jpg" title="Project Name" data-rel="fancybox-button">
 														<i class="fa fa-search"></i>
 													</a>
 												</div>
@@ -1017,23 +959,6 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_3 mix_all" style="display: block; opacity: 1;">
-											<div class="mix-inner">
-												<img class="img-responsive" src="assets_ltb/img/image-audio.jpg" alt="">
-												<div class="mix-details">
-													<h3>Voice memo</h3>
-													<p>
-														 At vero eos et accusamus et iusto odio digniss imos duc sasdimus qui sint blanditiis prae.
-													</p>
-													<a class="mix-link">
-														<i class="fa fa-link"></i>
-													</a>
-													<a class="mix-preview fancybox-button" href="assets_ltb/img/image-audio.jpg" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
-												</div>
-											</div>
-										</div>
 										<div class="col-md-4 col-sm-6 mix category_4 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-1.jpg" alt="">
@@ -1043,34 +968,6 @@
 														 Technical data Rotary drilling rig
 													</p>
 													<a class="mix-preview fancybox-button" href="assets_ltb/pdfs/Rotary-Drilling-Rig-1.pdf" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
-												</div>
-											</div>
-										</div>
-										<div class="col-md-4 col-sm-6 mix category_4 mix_all" style="display: block; opacity: 1;">
-											<div class="mix-inner">
-												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-2.jpg" alt="">
-												<div class="mix-details">
-													<h3>Rotary drilling rigs LB series</h3>
-													<p>
-														 Rotary drilling rigs LB series
-													</p>
-													<a class="mix-preview fancybox-button" href="assets_ltb/pdfs/Rotary-Drilling-Rig-2.pdf" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
-												</div>
-											</div>
-										</div>
-										<div class="col-md-4 col-sm-6 mix category_4 mix_all" style="display: block; opacity: 1;">
-											<div class="mix-inner">
-												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-3.jpg" alt="">
-												<div class="mix-details">
-													<h3>Casing Oscillators</h3>
-													<p>
-														 Casing Oscillators
-													</p>
-													<a class="mix-preview fancybox-button" href="assets_ltb/pdfs/Rotary-Drilling-Rig-3.pdf" title="Project Name" data-rel="fancybox-button">
 														<i class="fa fa-search"></i>
 													</a>
 												</div>
