--- a/home-context-my-toolbox.html
+++ b/home-context-my-toolbox.html
@@ -899,10 +899,23 @@ License: You must have a valid license purchased only from themeforest(the above
 					</div>
 				</div>
 				</a>
+                <a href="friends-list.html">
 				<div class="tile bg-red">
 					<div class="tile-body">
 						<i class="fa fa-group"></i>
 					</div>
+					<div class="tile-object">
+						<div class="name">
+							 Friends
+						</div>
+						<div class="number">
+							 4
+						</div>
+					</div>
+				</div>
+                </a>
+                <div class="tile bg-red">
+					<img src="assets_ltb/img/social-button.png" width=115 height=115 VSPACE=0 alt="">
 					<div class="tile-object">
 						<div class="name">
 							 Social
@@ -912,7 +925,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						</div>
 					</div>
 				</div>
-				<a href="friends-list.html">
+				<a href="profile-0.html">
 				<div class="tile selected bg-red">
 					<div class="tile-body">
 						<i class="fa fa-user"></i>
