--- a/friends-list.html
+++ b/friends-list.html
@@ -34,6 +34,11 @@
 			<img src="assets/img/logo-big-ltb.png" alt="logo" class="img-responsive"/>
 		</a>
 		<!-- END LOGO -->
+        <!-- BEGIN RESPONSIVE MENU TOGGLER -->
+        <a href="javascript:;" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <img src="assets/img/menu-toggler.png" alt=""/>
+        </a>
+        <!-- END RESPONSIVE MENU TOGGLER -->
 	</div>
 	<!-- END TOP NAVIGATION BAR -->
 </div>
@@ -131,49 +136,65 @@
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="tiles">
                 <a href="profile.html">
-				<div class="tile image selected">
+                <div class="tile double bg-red">
 					<div class="tile-body">
-						<img src="assets_ltb/img/profile/profile-1.jpg" alt="">
+						<img src="assets_ltb/img/profile/profile-1.jpg" width="70px" height="70px" alt="">
+						<h4>John Harrison</h4>
+						<p>
+							 Easily style icon color, size, shadow, and anything that's possible with CSS.
+						</p>
 					</div>
-					<div class="tile-object2">
+					<div class="tile-object">
 						<div class="name">
-							 John Harrison
+							 Class..?
 						</div>
 					</div>
 				</div>
                 </a>
                 <a href="profile-2.html">
-				<div class="tile image selected">
+                <div class="tile double bg-red">
 					<div class="tile-body">
-						<img src="assets_ltb/img/profile/profile-2.jpg" alt="">
+						<img src="assets_ltb/img/profile/profile-2.jpg" width="70px" height="70px" alt="">
+						<h4> Martin Fischer</h4>
+						<p>
+							 Easily style icon color, size, shadow, and anything that's possible with CSS.
+						</p>
 					</div>
-					<div class="tile-object2">
+					<div class="tile-object">
 						<div class="name">
-							 Martin Fischer 
+							 Class..?
 						</div>
 					</div>
 				</div>
                 </a>
                 <a href="profile-3.html">
-				<div class="tile image selected">
+                <div class="tile double bg-red">
 					<div class="tile-body">
-						<img src="assets_ltb/img/profile/profile-3.jpg" alt="">
+						<img src="assets_ltb/img/profile/profile-3.jpg" width="70px" height="70px" alt="">
+						<h4>Allison Sanders</h4>
+						<p>
+							 Easily style icon color, size, shadow, and anything that's possible with CSS.
+						</p>
 					</div>
-					<div class="tile-object2">
+					<div class="tile-object">
 						<div class="name">
-							 Allison Sanders
+							 Class..?
 						</div>
 					</div>
 				</div>
                 </a>
                 <a href="profile-4.html">
-				<div class="tile image selected">
+                <div class="tile double bg-red">
 					<div class="tile-body">
-						<img src="assets_ltb/img/profile/profile-4.jpg" alt="">
+						<img src="assets_ltb/img/profile/profile-4.jpg" width="70px" height="70px" alt="">
+						<h4>Mike Hundson</h4>
+						<p>
+							 Easily style icon color, size, shadow, and anything that's possible with CSS.
+						</p>
 					</div>
-					<div class="tile-object2">
+					<div class="tile-object">
 						<div class="name">
-							 Mike Hundson
+							 Class..?
 						</div>
 					</div>
 				</div>
