--- a/profile-0.html
+++ b/profile-0.html
@@ -19,7 +19,7 @@
 <!-- BEGIN THEME STYLES -->
 <link href="assets/css/style-metronic.css" rel="stylesheet" type="text/css">
 <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-<link href="assets/css/style-responsive.css" rel="stylesheet" type="text/css">
+<link href="assets_ltb/css/child/style-responsive-child.css" rel="stylesheet" type="text/css">
 <link href="assets/css/plugins.css" rel="stylesheet" type="text/css">
 <link href="assets/css/themes/default.css" rel="stylesheet" type="text/css" id="style_color">
 <link href="assets/css/pages/profile.css" rel="stylesheet" type="text/css">
@@ -36,7 +36,7 @@
 	<div class="header-inner">
 		<!-- BEGIN LOGO -->
 		<a class="navbar-brand" href="index.html">
-			<img src="assets_ltb/img/logo.png" alt="logo" class="img-responsive"/>
+			<img src="assets/img/logo-big-ltb.png" alt="logo" class="img-responsive"/>
 		</a>
 		<!-- END LOGO -->
         <!-- BEGIN RESPONSIVE MENU TOGGLER -->
@@ -141,6 +141,13 @@
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="row profile">
 				<div class="col-md-12">
+                <div class="btn-group btn-group-solid">
+					<button type="button" class="btn red"><i class="fa fa-user"></i> Overview</button>
+					<button type="button" class="btn red"><i class="fa fa-cogs"></i> Account</button>
+					<button type="button" class="btn red"><i class="fa fa-briefcase"></i> Projects</button>
+                    <button type="button" class="btn red"><i class="fa fa-question"></i> Discussions</button>
+                    <button type="button" class="btn red"><i class="fa fa-caret-square-o-right"></i> Collections</button>
+                </div>
 					<!--BEGIN TABS-->
 					<div class="tabbable tabbable-custom tabbable-full-width">
 						<ul class="nav nav-tabs">
@@ -176,7 +183,7 @@
 									<div class="col-md-3">
 										<ul class="list-unstyled profile-nav">
 											<li>
-												<img src="assets_ltb/img/profile/profile-2.jpg" class="img-responsive" alt="">
+												<img src="assets_ltb/img/profile/profile-0.jpg" class="img-responsive" alt="">
 												<a href="#" class="profile-edit">
 													 edit
 												</a>
@@ -209,7 +216,7 @@
 									<div class="col-md-9">
 										<div class="row">
 											<div class="col-md-8 profile-info">
-												<h1><b>Martin Fischer</b></h1>
+												<h1><b>Gilbert Peffer</b></h1>
 												<p>
 													 I am currently working as a project coordinator at the Centre for Numerical Methods in Engineering and as a researcher with IAFI, a small research unit at the University of Barcelona that focuses on the broad philosophical and methodological foundations of finance.<br /><br />
                                                      I studied aeronautical and aerospace engineering at the University of Stuttgart where I also worked as a research assistant on aerodynamic simulation models. In 1992 I joined the Oxford University Computing Lab to continue in this line of research, but with a more theoretical emphasis on the numerical mathematics of partial differential equations. In 1995, I was hired by Salomon Brothers, a U.S. investment bank, into their fixed income research division where I worked for a number of years, first as a generalist, then as a vice-president. In the year 2000, I took up a position at CIMNE to promote research activities in the field of numerical methods in finance. I have coordinated a number of research projects in the area of learning technologies, decision support, and business simulation.Currently I am coordinating a EU research project, x Delia, that investigates the role of behavioural biases and emotions in building financial competence and expertise, and that develops sensor and game technologies to support non-formal and informal learning in professional trading, private investment, and personal finance. <br /><br />
@@ -890,30 +897,21 @@
 											 All
 										</li>
 										<li class="filter" data-filter="category_1">
-											 Videos
+											 Mine
 										</li>
 										<li class="filter" data-filter="category_2">
-											 Images
-										</li>
-										<li class="filter" data-filter="category_3">
-											 Audio
-										</li>
-										<li class="filter" data-filter="category_4">
-											 Documents
+											 Subscribed
 										</li>
 									</ul>
 									<div class="row mix-grid thumbnails">
-										<div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-4 col-sm-6 mix category_1 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
-												<img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-6.jpg" alt="">
+												<img class="img-responsive" src="assets_ltb/img/topic.jpg" alt="">
 												<div class="mix-details">
-													<h3>Preview Image</h3>
+													<h3>Problem</h3>
 													<p>
 														 At vero eos et accusamus et iusto odio digniss imos duc sasdimus qui sint blanditiis prae sentium.
 													</p>
-													<a class="mix-link" href="http://www.liebherr.com/MCF/en-GB/products_mcf.wfw/id-20860-0/measure-metric/tab-13284_107">
-														<i class="fa fa-link"></i>
-													</a>
 													<a class="mix-preview fancybox-button" href="assets_ltb/img/Rotary-Drilling-Rig-6.jpg" title="Project Name" data-rel="fancybox-button">
 														<i class="fa fa-search"></i>
 													</a>
@@ -922,177 +920,34 @@
 										</div>
 										<div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
-												<img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-2.jpg" alt="">
+												<a href="collection-1.html">
+                                                <img class="img-responsive" src="assets_ltb/img/HS-845-1.jpg" alt="">
 												<div class="mix-details">
-													<h3>Preview Image</h3>
+													<h3>HS 845 HD Litronic</h3>
 													<p>
 														 At vero eos et accusamus et iusto odio digniss imos duc sasdimus qui sint blanditiis prae sentium.
 													</p>
-													<a class="mix-link" href="http://www.liebherr.com/MCF/en-GB/products_mcf.wfw/id-20860-0/measure-metric/tab-13284_107">
+													<a class="mix-link" href="http://www.liebherr.com/MCF/en-GB/products_mcf.wfw/id-21402-0/measure-metric/tab-1054_1522">
 														<i class="fa fa-link"></i>
 													</a>
-													<a class="mix-preview fancybox-button" href="assets_ltb/img/Rotary-Drilling-Rig-2.jpg" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
 												</div>
+                                                </a>
 											</div>
 										</div>
                                         <div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
-												<img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-3.jpg" alt="">
+												<a href="collection-2.html">
+                                                <img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-6.jpg" alt="">
 												<div class="mix-details">
-													<h3>Preview Image</h3>
+													<h3>LB 44</h3>
 													<p>
 														 At vero eos et accusamus et iusto odio digniss imos duc sasdimus qui sint blanditiis prae sentium.
 													</p>
-													<a class="mix-link" href="http://www.liebherr.com/MCF/en-GB/products_mcf.wfw/id-20860-0/measure-metric/tab-13284_107">
+													<a class="mix-link" href="http://www.liebherr.com/MCF/en-GB/products_mcf.wfw/id-21402-0/measure-metric/tab-1054_1522">
 														<i class="fa fa-link"></i>
 													</a>
-													<a class="mix-preview fancybox-button" href="assets_ltb/img/Rotary-Drilling-Rig-3.jpg" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
 												</div>
-											</div>
-										</div>
-                                        <div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
-											<div class="mix-inner">
-												<img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-4.jpg" alt="">
-												<div class="mix-details">
-													<h3>Preview Image</h3>
-													<p>
-														 At vero eos et accusamus et iusto odio digniss imos duc sasdimus qui sint blanditiis prae sentium.
-													</p>
-													<a class="mix-link" href="http://www.liebherr.com/MCF/en-GB/products_mcf.wfw/id-20860-0/measure-metric/tab-13284_107">
-														<i class="fa fa-link"></i>
-													</a>
-													<a class="mix-preview fancybox-button" href="assets_ltb/img/Rotary-Drilling-Rig-4.jpg" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
-												</div>
-											</div>
-										</div>
-                                        <div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
-											<div class="mix-inner">
-												<img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-5.jpg" alt="">
-												<div class="mix-details">
-													<h3>Preview Image</h3>
-													<p>
-														 At vero eos et accusamus et iusto odio digniss imos duc sasdimus qui sint blanditiis prae sentium.
-													</p>
-													<a class="mix-link" href="http://www.liebherr.com/MCF/en-GB/products_mcf.wfw/id-20860-0/measure-metric/tab-13284_107">
-														<i class="fa fa-link"></i>
-													</a>
-													<a class="mix-preview fancybox-button" href="assets_ltb/img/Rotary-Drilling-Rig-5.jpg" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
-												</div>
-											</div>
-										</div>
-										<div class="col-md-4 col-sm-6 mix category_1 mix_all" style="display: block; opacity: 1;">
-											<div class="mix-inner">
-												<img class="img-responsive" src="assets_ltb/img/Preview-video1.jpg" alt="">
-												<div class="mix-details">
-													<h3>Liebherr LB 44 rotary drilling rig</h3>
-													<p>
-														 Liebherr LB 44 rotary drilling rig [5:51 min.]
-													</p>
-													<a class="mix-link">
-														<i class="fa fa-link"></i>
-													</a>
-													<a class="mix-preview fancybox-button" href="assets_ltb/img/Preview-video1.jpg" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
-												</div>
-											</div>
-										</div>
-										<div class="col-md-4 col-sm-6 mix category_3 mix_all" style="display: block; opacity: 1;">
-											<div class="mix-inner">
-												<img class="img-responsive" src="assets_ltb/img/image-audio.jpg" alt="">
-												<div class="mix-details">
-													<h3>Voice memo</h3>
-													<p>
-														 At vero eos et accusamus et iusto odio digniss imos duc sasdimus qui sint blanditiis prae sentium.
-													</p>
-													<a class="mix-link">
-														<i class="fa fa-link"></i>
-													</a>
-													<a class="mix-preview fancybox-button" href="assets_ltb/img/image-audio.jpg" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
-												</div>
-											</div>
-										</div>
-										<div class="col-md-4 col-sm-6 mix category_3 mix_all" style="display: block; opacity: 1;">
-											<div class="mix-inner">
-												<img class="img-responsive" src="assets_ltb/img/image-audio.jpg" alt="">
-												<div class="mix-details">
-													<h3>Voice memo</h3>
-													<p>
-														 At vero eos et accusamus et iusto odio digniss imos duc sasdimus qui sint blanditiis prae.
-													</p>
-													<a class="mix-link">
-														<i class="fa fa-link"></i>
-													</a>
-													<a class="mix-preview fancybox-button" href="assets_ltb/img/image-audio.jpg" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
-												</div>
-											</div>
-										</div>
-										<div class="col-md-4 col-sm-6 mix category_4 mix_all" style="display: block; opacity: 1;">
-											<div class="mix-inner">
-												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-1.jpg" alt="">
-												<div class="mix-details">
-													<h3>Technical data Rotary drilling rig</h3>
-													<p>
-														 Technical data Rotary drilling rig
-													</p>
-													<a class="mix-preview fancybox-button" href="assets_ltb/pdfs/Rotary-Drilling-Rig-1.pdf" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
-												</div>
-											</div>
-										</div>
-										<div class="col-md-4 col-sm-6 mix category_4 mix_all" style="display: block; opacity: 1;">
-											<div class="mix-inner">
-												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-2.jpg" alt="">
-												<div class="mix-details">
-													<h3>Rotary drilling rigs LB series</h3>
-													<p>
-														 Rotary drilling rigs LB series
-													</p>
-													<a class="mix-preview fancybox-button" href="assets_ltb/pdfs/Rotary-Drilling-Rig-2.pdf" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
-												</div>
-											</div>
-										</div>
-										<div class="col-md-4 col-sm-6 mix category_4 mix_all" style="display: block; opacity: 1;">
-											<div class="mix-inner">
-												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-3.jpg" alt="">
-												<div class="mix-details">
-													<h3>Casing Oscillators</h3>
-													<p>
-														 Casing Oscillators
-													</p>
-													<a class="mix-preview fancybox-button" href="assets_ltb/pdfs/Rotary-Drilling-Rig-3.pdf" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
-												</div>
-											</div>
-										</div>
-										<div class="col-md-4 col-sm-6 mix category_4 mix_all" style="display: block; opacity: 1;">
-											<div class="mix-inner">
-												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-4.jpg" alt="">
-												<div class="mix-details">
-													<h3>Rock drilling tools</h3>
-													<p>
-														 Rock drilling tools
-													</p>
-													<a class="mix-preview fancybox-button" href="assets_ltb/pdfs/Rotary-Drilling-Rig-4.pdf" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
-												</div>
+                                                </a>
 											</div>
 										</div>
 								</div>
