--- a/profile.html
+++ b/profile.html
@@ -36,9 +36,14 @@
 	<div class="header-inner">
 		<!-- BEGIN LOGO -->
 		<a class="navbar-brand" href="index.html">
-			<img src="assets/img/logo-big-ltb.png" alt="logo" class="img-responsive"/>
+			<img src="assets_ltb/img/logo.png" alt="logo" class="img-responsive"/>
 		</a>
 		<!-- END LOGO -->
+        <!-- BEGIN RESPONSIVE MENU TOGGLER -->
+        <a href="javascript:;" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <img src="assets/img/menu-toggler.png" alt=""/>
+        </a>
+        <!-- END RESPONSIVE MENU TOGGLER -->
 	</div>
 	<!-- END TOP NAVIGATION BAR -->
 </div>
