Fixed the broken links from logo to home page. Extracted side menu bar to separate file and set it to 'page-sidebar-closed'

--- a/addmedia2.html
+++ b/addmedia2.html
@@ -51,7 +51,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	<!-- BEGIN TOP NAVIGATION BAR -->
 	<div class="header-inner">
 		<!-- BEGIN LOGO -->
-		<a class="navbar-brand" href="index.html">
+		<a class="navbar-brand" href="home-context-my-toolbox.html">
 			<img src="assets/img/logo-big-ltb.png" alt="logo" class="img-responsive"/>
 		</a>
 		<!-- END LOGO -->
