--- a/profile-0.html
+++ b/profile-0.html
@@ -35,7 +35,7 @@
 	<!-- BEGIN TOP NAVIGATION BAR -->
 	<div class="header-inner">
 		<!-- BEGIN LOGO -->
-		<a class="navbar-brand" href="index.html">
+		<a class="navbar-brand" href="home-context-my-toolbox.html">
 			<img src="assets/img/logo-big-ltb.png" alt="logo" class="img-responsive"/>
 		</a>
 		<!-- END LOGO -->
