Extracted the sidebar menu into separate html and included it in the my-toolbox page using jQuery load()

--- a/home-context-my-toolbox.html
+++ b/home-context-my-toolbox.html
@@ -68,7 +68,7 @@ License: You must have a valid license purchased only from themeforest(the above
         <div class="page-sidebar navbar-collapse collapse">
             <!-- add "navbar-no-scroll" class to disable the scrolling of the sidebar menu -->
             <!-- BEGIN SIDEBAR MENU -->
-            <div id="includedLeftMenu"></div>
+            <div id="includeSidebarMenu"></div>
             <!-- END SIDEBAR MENU -->
         </div>
     </div>
@@ -280,7 +280,7 @@ jQuery(document).ready(function() {
 </script>
 <script> 
     $(function(){
-      $("#includedContent").load("tmp-include.html"); 
+      $("#includeSidebarMenu").load("sidebar-menu.html"); 
     });
 </script> 
 <!-- END JAVASCRIPTS -->
