--- a/socialmedia.html
+++ b/socialmedia.html
@@ -909,7 +909,7 @@ License: You must have a valid license purchased only from themeforest(the above
 				</div>
 				</a>
 				<a href="https://www.twitter.com">
-				<div class="tile selected bg-blue">
+				<div class="tile bg-blue">
 					<div class="tile-body">
 						<i class="fa fa-twitter"></i>
 					</div>
