--- a/home-context-my-toolbox.html
+++ b/home-context-my-toolbox.html
@@ -111,6 +111,7 @@ License: You must have a valid license purchased only from themeforest(the above
 					</div>
 				</div>
                 </a>
+                <a href="socialmedia.html">
                 <div class="tile bg-red">
 					<img src="assets_ltb/img/social-button.png" width=115 height=115 VSPACE=0 alt="">
 					<div class="tile-object">
@@ -122,8 +123,9 @@ License: You must have a valid license purchased only from themeforest(the above
 						</div>
 					</div>
 				</div>
+				</a>
 				<a href="profile-0.html">
-				<div class="tile selected bg-red">
+				<div class="tile bg-red">
 					<div class="tile-body">
 						<i class="fa fa-user"></i>
 					</div>
@@ -177,6 +179,7 @@ License: You must have a valid license purchased only from themeforest(the above
                         </div>
                     </div>
                 </div>
+                <a href="dont-panic.html">
 				<div class="tile bg-red">
 					<div class="tile-body">
                                             <br/>
@@ -190,6 +193,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						</div>
 					</div>
 				</div>
+				</a>
 				<div class="tile bg-red">
 					<div class="tile-body">
 						<i class="fa fa-cogs"></i>
