Added some content

--- a/head-injury.html
+++ b/head-injury.html
@@ -151,103 +151,110 @@ License: You must have a valid license purchased only from themeforest(the above
 	<div class="page-content-wrapper">
 		<div class="page-content">
 			<!-- BEGIN PAGE CONTENT-->
-			<div class="tiles">
-              <div class="inner">	
-              	<a href="head-injury.html">
-				<div class="tile bg-blue">
-					<div class="tile-body">
-						<i class="fa fa-headphones"></i>
-					</div>
-					<div class="tile-object">
-						<div class="name">
-							 Head Injury
+			<div class="portlet box green">
+						<div class="portlet-title">
+							<div class="caption">
+								<i class="fa fa-reorder"></i>Head Injury
+							</div>
+							<div class="tools">
+								<a href="javascript:;" class="collapse">
+								</a>
+								<a href="#portlet-config" data-toggle="modal" class="config">
+								</a>
+								<a href="javascript:;" class="reload">
+								</a>
+								<a href="javascript:;" class="remove">
+								</a>
+							</div>
 						</div>
-					</div>
-				</div>
-				</a>
-				<div class="tile  bg-blue">
-					<div class="tile-body">
-						<i class="fa fa-exclamation"></i>
-					</div>
-					<div class="tile-object">
-						<div class="name">
-							 Back Injury
-						</div>
-					</div>
-				</div>
-				<div class="tile  bg-blue">
-					<div class="tile-body">
-						<i class="fa fa-arrow-down"></i>
-					</div>
-					<div class="tile-object">
-						<div class="name">
-							 Fall Injury
-						</div>
-					</div>
-				</div>
-				<div class="tile  bg-blue">
-					<div class="tile-body">
-						<i class="fa fa-fire"></i>
-					</div>
-					<div class="tile-object">
-						<div class="name">
-							 Burn Injury
-						</div>
-					</div>
-				</div>
-				<div class="tile  bg-blue">
-					<div class="tile-body">
-						<i class="fa fa-lightbulb-o"></i>
-					</div>
-					<div class="tile-object">
-						<div class="name">
-							 Electrical Injury
-						</div>
-					</div>
-				</div>
-				<div class="tile  bg-blue">
-					<div class="tile-body">
-						<i class="fa fa-glass"></i>
-					</div>
-					<div class="tile-object">
-						<div class="name">
-							 Chemical
-						</div>
-					</div>
-				</div>
-				<div class="tile  bg-blue">
-					<div class="tile-body">
-						<br>
-						<br>
-						<h1> CPR</h1>
-					</div>
-					<div class="tile-object">
-						<div class="name">
-							 
-						</div>
-					</div>
-				</div>
-				<a href="dont-panic.html">
-				<div class="tile bg-red">
-					<div class="tile-body">
-                                            <br/>
-                                            <h1>Don't</h1>
-                                            <br/>
-                                            <h1>Panic</h1>
-					</div>
-					<div class="tile-object">
-						<div class="name">
-							 Get Help
-						</div>
-					</div>
-				</div>
-				</a>
+						<div class="portlet-body">
+							<div class="panel-group accordion" id="accordion1">
+								<div class="panel panel-default">
+									<div class="panel-heading">
+										<h4 class="panel-title">
+										<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapse_1">
+											 Step 1
+										</a>
+										</h4>
+									</div>
+									<div id="collapse_1" class="panel-collapse collapse in" style="height: auto;">
+										<div class="panel-body">
+											<p>
+												 Check if the person is any of the following, if they are then call for an ambulance
+											</p>
+											<p>
+												<ul>
+													<li>Becomes very sleepy</li>
+													<li>Behaves abnormally</li>
+													<li>Throws up more than once</li>
+													<li>Develops a severe headache or stiff neck</li>
+													<li>Has pupils of unequal sizes</li>
+													<li>Is unable to move an arm or leg</li>
+													<li>Loses consciousness, even briefly</li>
+												</ul>
+											</p>
+										</div>
+									</div>
+								</div>
+								<div class="panel panel-default">
+									<div class="panel-heading">
+										<h4 class="panel-title">
+										<a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion1" href="#collapse_2">
+											 Step 2
+										</a>
+										</h4>
+									</div>
+									<div id="collapse_2" class="panel-collapse collapse" style="height: 0px;">
+										<div class="panel-body" style="height:200px; overflow-y:auto;">
+											<p>
+												 Next steps in case of a severe head injury
+											</p>
+											<ol>
+												<li>Call emergency services straight away.</li>
+												<li>Check the person's airway, breathing, and circulation. If necessary, begin  <a href="http://www.nhs.uk/Conditions/Accidents-and-first-aid/Pages/CPR.aspx">CPR</a>.</li>
+												<li>If the person's breathing and their heartrate is steadu but the person is unconscious, treat as if there is injury to the spine. Keeo the persons head stablizied by placing your hands on either side of the head. Wait for medical help.</li>
+												<li>Stop any bleeding by compressing a clean cloth on the wound. If the injury is serious, be careful not&nbsp;to move the person's head. If blood soaks through the cloth, do&nbsp;not remove it. Place another cloth over the first one.</li>
+												<li>If you suspect the skull is abit cracked, Don't  pressure the bleeding site, and Don't remove debris from the wound</li>
+												<li>If the person is throwing up, roll the person head, neck, and body as one unit onto his /her side to prevent choking.</li>
+												<li>Apply ice to bumpy areas.</li>
+												</ol>
+										</div>
+									</div>
+								</div>
+								
 
-            </div>
-			</div>
+							</div>
+						</div>
+					</div>
+				<div class="tiles">
+	              <div class="inner">	
+		              	<a href="first-aid.html">
+						<div class="tile bg-red">
+							<div class="tile-body">
+								<i class="fa fa-medkit"></i>
+							</div>
+							<div class="tile-object">
+								<div class="name">
+									 Back to first aid
+								</div>
+							</div>
+						</div>
+						</a>
+						<a href ="home-context-my-toolbox.html0">
+						<div class="tile  bg-red">
+							<div class="tile-body">
+								<i class="fa fa-home"></i>
+							</div>
+							<div class="tile-object">
+								<div class="name">
+									 Back to Home
+								</div>
+							</div>
+						</div>
+						</a>
+					</div>
+				</div>
 			<!-- END PAGE CONTENT-->
-		</div>
-		
 	</div>
 	<!-- END CONTENT -->
 </div>
