added link to home page

--- a/dont-panic.html
+++ b/dont-panic.html
@@ -175,6 +175,18 @@ License: You must have a valid license purchased only from themeforest(the above
 						</div>
 					</div>
 				</div>
+				<a href ="home-context-my-toolbox.html0">
+						<div class="tile  bg-red">
+							<div class="tile-body">
+								<i class="fa fa-home"></i>
+							</div>
+							<div class="tile-object">
+								<div class="name">
+									 Back to Home
+								</div>
+							</div>
+						</div>
+						</a>
 
             </div>
 			</div>
